Ported to Patchouli 1.21 Book doesn't work right now, not sure if PNC or patchouli problem...